# Boa-interpreter

./: LendingGalore.ipynb
interp/: dune-project  example.boa
interp/_build/: .db  .digest-db  log
interp/_build/default/: interp.dune-package  interp.install
interp/_build/default/.dune/: configurator  configurator.v2
interp/_build/default/.utop/: utop.ml-gen
interp/_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmo  dune__exe__Utop.cmt
interp/_build/default/lib/: Eval.ml  Lexer.ml  Parser.ml  ParserInterface.ml  Parser__mock.ml.mock  Parser__mock.mli.inferred  Syntax.ml  libs_core.cma  libs_core.cmxa  libs_core.cmxs  libs_core.ml-gen
interp/_build/default/lib/.libs_core.objs/: Eval.ml.d  Parser.ml.d  Parser.mli.d  ParserInterface.ml.d  Parser__mock.ml.mock.d  Syntax.ml.d  libs_core__Eval.impl.all-deps  libs_core__Lexer.impl.all-deps  libs_core__Parser.impl.all-deps  libs_core__ParserInterface.impl.all-deps  libs_core__Syntax.impl.all-deps
interp/_build/default/lib/.libs_core.objs/byte/: libs_core.cmi  libs_core.cmo  libs_core.cmt  libs_core__Eval.cmi  libs_core__Eval.cmo  libs_core__Eval.cmt  libs_core__Lexer.cmi  libs_core__Lexer.cmo  libs_core__Lexer.cmt  libs_core__Parser.cmi  libs_core__Parser.cmo  libs_core__Parser.cmt  libs_core__Parser.cmti  libs_core__ParserInterface.cmi  libs_core__ParserInterface.cmo  libs_core__ParserInterface.cmt  (+3 more)
interp/_build/default/lib/.merlin-conf/: lib-libs_core
interp/_build/default/test/.merlin-conf/: exe-ParserTest
interp/lib/: Lexer.mll  Parser.mly  dune
interp/test/: ParserTest.ml  dune
(+9 files in other folders)
